fix spacing errors

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
         text-decoration: none;
         font-weight: bold;
         font-size: 15x;
-        margin-left: 1rem;
+        /* margin-left: 1rem; */
     }
 
     .container {
